--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- links/references to fonts hosted on Google; must be placed before custom stylesheet -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@400;700&family=Encode+Sans+SC:wght@400;600&family=Encode+Sans:wght@400;600&family=Montserrat+Subrayada:wght@400;700&family=Montserrat:wght@400;600&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="">
 
     <title>Menu | 88 K-Pot</title>
