--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <!-- javascript -->
-    <!-- <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js"
+    <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js"
         integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
     <script>
         var header = $('body');
@@ -69,7 +69,7 @@
         }
         setInterval(nextBackground, 3500);
         header.css('background-image', backgrounds[0]);
-    </script> -->
+    </script>
 
 </body>
 
